--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf_en.properties
@@ -250,3 +250,4 @@ segundoApellidoXX=Second_last_name
 nombreX=Name
 msgborrarLiquidacion=Are you sure you want to delete the liquidation?
 msgborrarLiquidacionPorFuera=Are you sure you want to delete 'settlement outside payroll?
+confirmarProcesoInterfaceContableTotal=Don't forget that before you generate an ACCOUNTING interface, you must have sent data to Treasury  and have your payroll closed. Do you want to continue?
