--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontabletotal_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontabletotal_en.properties
@@ -12,14 +12,14 @@ nuevo=New Entry
 eliminar=Erase Entry
 duplicar=Duplicate Entry
 rastro=Trace
-confirmarRastro=The table 'VIGENCIASREFORMASLABORALES' has traces for the selected entry, do you wish to continue?
-confirmarRastroHistorico=The table 'VIGENCIASREFORMASLABORALES' has historic traces,do you wish to continue?
+confirmarRastro=The table 'INTERCON_TOTAL' has traces for the selected entry, do you wish to continue?
+confirmarRastroHistorico=The table 'INTERCON_TOTAL' has historic traces,do you wish to continue?
 errorRastroHistorico=The table has no historic traces.
 errorRegistroRastro=The selected entry has no traces.
 errorTablaConRastro=The table does not exist in RASTROSTABLAS but it has associated entries, do you wish to continue?
 errorTablaSinRastro=The table does not exist in RASTROSTABLAS and has no associated entries.
 seleccionarRegistro=Please choose an entry.
-errorObjetosDB=The table 'VIGENCIASREFORMASLABORALES' hasn't been found ObjetosDB. Please get in touch with support
+errorObjetosDB=The table 'INTERCON_TOTAL' hasn't been found ObjetosDB. Please get in touch with support
 #Otros
 vacio=No results were found for this search 
 lovvacio=No results containing the search criteria were found
@@ -124,10 +124,10 @@ cerrarPeriodo=Close Accounting Period
 tipoPlano=File Type: 
 detallado=Detailed
 semiDetallado=Semi-Detailed
-resumido=summarized
+resumido=Summarized
 anteriorContabilizacion=The last interface was sent: 
 nuncaContabilizo=Never been accomplished a accounting
-errorFechasParametros=
+errorFechasParametros=The dates entered do not match the parameters dates. Please check the dates to continue.
 anularComprobantesCerrados=Your about to cancel a voucher. \u00bfAre you sure to continue and cancel the file?
 procesoDeshacer=Your about to undo the account process.  \u00bfAre you sure to continue?
 paso1CerrarPeriodo=At this point it will close the accounting period for the process: 
