--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontablesapbov8_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontablesapbov8_en.properties
@@ -77,3 +77,57 @@ cuentaDebito=Debit Account
 tercero=Supplier
 concepto=Concept
 valor=Value
+anteriorContabilizacion=The last interface was sent: 
+nuncaContabilizo=Never been accomplished a accounting
+errorFechasParametros=The dates entered do not match the parameters dates. Please check the dates to continue.
+anularComprobantesCerrados=Your about to cancel a voucher. \u00bfAre you sure to continue and cancel the file?
+procesoDeshacer=Your about to undo the account process.  \u00bfAre you sure to continue?
+paso1CerrarPeriodo=At this point it will close the accounting period for the process: 
+paso2CerrarPeriodo=\u00bfAre you completely sure?
+procesoSinDatos=The process has not returned any results in the search
+deshacer=[Undo]
+reportecontrol=Control Report
+empleado=Employee
+cuenta=Account
+valorDebito=Debit Value
+valorCredito=Credit Value
+centroCosto=Cost Center
+totalC=Credit Total: 
+totalD=Debit Total: 
+cerrarPeriodo=Close Accounting Period
+enviar=Assess
+contabilizadosSAP=Assess SAP BO V8
+numDocumento=ID Number
+fechaGenerada=G. D.
+textFechaGenerada=Generation Date
+proyecto=Project
+lote=Lot
+fechaVencimiento=Expiration Date
+editarProcesoIntercon=Process - SAP
+editarProyectoIntercon=Project - SAP
+editarLoteIntercon=Lot - SAP
+editarFechaVParametro=Expiration_Date
+numDocumentoXX=ID Number
+numDocumentoX=ID_Number
+fechaGeneracionXX=Generation_Date
+proyectoX=Project
+loteX=Lot
+fechaVXX=Expiration_Date
+editarEmpleadoIntercon=Employee - SAP
+editarTerceroIntercon=Supplier -SAP
+editarCuentaIntercon=Account - SAP
+editarDebitoIntercon=Debit Value
+editarCreditoIntercon=Credit Value
+editarConceptoIntercon=Concept - SAP
+editarCentroCostoIntercon=Cost Center - TotalSAP
+enviarSAPBO=Send to SAPBO
+HISTORICO=See Historical
+paso1Recon=
+paso2Recon=
+paso3Recon1=
+paso3Recon2=Are you sure?
+consecutivo=Consecutive
+mensaje=Message
+empresaSAP=SAP Company
+fecha=Date
+erroresM=ERRORS
