--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/causaausentismo_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/causaausentismo_en.properties
@@ -115,3 +115,5 @@ descripcione=Description
 clasee=Absenteeism Class
 porcentajeliquidacione=Settlement Percentage
 restadiasincapacidade=Remander Disability Days
+#Duplicar Registro CAUSA AUSENTISMO
+duplicarregistro=Duplicate Entry Absenteeism Cause
