--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontablesapbohp_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontablesapbohp_en.properties
@@ -12,14 +12,14 @@ nuevo=New Entry
 eliminar=Erase Entry
 duplicar=Duplicate Entry
 rastro=Trace
-confirmarRastro=The table 'INTERCON_TOTAL' has traces for the selected entry, do you wish to continue?
-confirmarRastroHistorico=The table 'INTERCON_TOTAL' has historic traces,do you wish to continue?
+confirmarRastro=The table 'INTERCON_SAPBO' has traces for the selected entry, do you wish to continue?
+confirmarRastroHistorico=The table 'INTERCON_SAPBO' has historic traces,do you wish to continue?
 errorRastroHistorico=The table has no historic traces.
 errorRegistroRastro=The selected entry has no traces.
 errorTablaConRastro=The table does not exist in RASTROSTABLAS but it has associated entries, do you wish to continue?
 errorTablaSinRastro=The table does not exist in RASTROSTABLAS and has no associated entries.
 seleccionarRegistro=Please choose an entry.
-errorObjetosDB=The table 'INTERCON_TOTAL' hasn't been found ObjetosDB. Please get in touch with support
+errorObjetosDB=The table 'INTERCON_SAPBO' hasn't been found ObjetosDB. Please get in touch with support
 #Otros
 vacio=No results were found for this search 
 lovvacio=No results containing the search criteria were found
@@ -77,54 +77,6 @@ cuentaDebito=Debit Account
 tercero=Supplier
 concepto=Concept
 valor=Value
-editarProcesoGenerado=Process - Generated
-editarEmpleadoGenerado=Employee - Generated
-editarCreditoGenerado=Credit Account
-editarDebitoGenerado=Debit Account
-editarTerceroGenerado=Supplier NIT
-editarValorGenerado=Value - Generated
-editarConceptoGenerado=Concept - Generated
-enviar=Send
-deshacer=[Undo]
-reportecontrol=Control Report
-totalC=Credit Total: 
-totalD=Debit Total: 
-intercontotal=Accounted With Total
-empleado=Employee
-cuenta=Account
-valorDebito=Debit Value
-valorCredito=Credit Value
-centroCosto=Cost Center
-editarEmpleadoIntercon=Employee - Total
-editarTerceroIntercon=Supplier -Total
-editarCuentaIntercon=Account - Total
-editarDebitoIntercon=Debit Value
-editarCreditoIntercon=Credit Value
-editarConceptoIntercon=Concept - Total
-editarCentroCostoIntercon=Cost Center - Total
-empleadoX=Employee
-cuentaX=Account
-terceroX=Supplier
-debitoXX=Debit_Value
-debitoX=Debit Value
-creditoXX=Credit_Value
-creditoX=Credit Value
-conceptoX=Concept
-centroCostoXX=Cost_Center
-centroCostoX=Cost Center
-valorX=Value
-cuentaDXX=Debit_Account
-cuentaDX=Debit Account
-cuentaCXX=Credit_Account
-cuentaCX=Credit Account
-nombreEmpleadoXX=Employee_Name
-nombreEmpleadoX=Employee Name
-generarPlano=Generate File
-cerrarPeriodo=Close Accounting Period
-tipoPlano=File Type: 
-detallado=Detailed
-semiDetallado=Semi-Detailed
-resumido=Summarized
 anteriorContabilizacion=The last interface was sent: 
 nuncaContabilizo=Never been accomplished a accounting
 errorFechasParametros=The dates entered do not match the parameters dates. Please check the dates to continue.
@@ -133,4 +85,49 @@ procesoDeshacer=Your about to undo the account process.  \u00bfAre you sure to c
 paso1CerrarPeriodo=At this point it will close the accounting period for the process: 
 paso2CerrarPeriodo=\u00bfAre you completely sure?
 procesoSinDatos=The process has not returned any results in the search
+deshacer=[Undo]
+reportecontrol=Control Report
+empleado=Employee
+cuenta=Account
+valorDebito=Debit Value
+valorCredito=Credit Value
+centroCosto=Cost Center
+totalC=Credit Total: 
+totalD=Debit Total: 
+cerrarPeriodo=Close Accounting Period
+enviar=Send
+contabilizadosSAP=Assess SAP BO Pardo Flour
+numDocumento=ID Number
+proyecto=Project
+editarProcesoIntercon=Process - SAP
+editarProyectoIntercon=Project - SAP
+numDocumentoXX=ID Number
+numDocumentoX=ID_Number
+fechaGeneracionXX=Generation_Date
+proyectoX=Project
+editarEmpleadoIntercon=Employee - SAP
+editarTerceroIntercon=Supplier -SAP
+editarCuentaIntercon=Account - SAP
+editarDebitoIntercon=Debit Value
+editarCreditoIntercon=Credit Value
+editarConceptoIntercon=Concept - SAP
+editarCentroCostoIntercon=Cost Center - TotalSAP
+enviarSAPBO=Generate TXT
+HISTORICO=See Historical
 contadoCeroPerContable=This time period was already closed !
+paso1Recon=You're about to do the a re-accounting process, and this process is going to be taken into notice in the accounting configuration of payroll concepts, for it to have an effect it's state must be GENERATED
+paso2Recon=Are you sure?
+paso3Recon1=You going to re-accounting to
+paso3Recon2=Are you sure?
+errorRecon=The re-accounting process can't be done because there has never been a accounting process.
+empleadoX=Employee
+terceroX=Supplier
+cuentaX=Account
+debitoXX=Debit_Value
+debitoX=Debit Value
+creditoXX=Credit_Value
+creditoX=Credit Value
+conceptoX=Concept
+centroCostoXX=Cost_Center
+centroCostoX=Cost Center
+numDocumentoN=ID Number: 
