--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontablesapbov8_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontablesapbov8_en.properties
@@ -122,12 +122,26 @@ editarConceptoIntercon=Concept - SAP
 editarCentroCostoIntercon=Cost Center - TotalSAP
 enviarSAPBO=Send to SAPBO
 HISTORICO=See Historical
-paso1Recon=
-paso2Recon=
-paso3Recon1=
+paso1Recon=You're about to do the a re-accounting process, and this process is going to be taken into notice in the accounting configuration of payroll concepts, for it to have an effect it's state must be GENERATED
+paso2Recon=Are you sure?
+paso3Recon1=You going to re-accounting to: 
 paso3Recon2=Are you sure?
 consecutivo=Consecutive
 mensaje=Message
 empresaSAP=SAP Company
 fecha=Date
 erroresM=ERRORS
+contadoCeroPerContable=This time period was already closed !
+errorRecon=The re-accounting process can't be done because there has never been a accounting process.
+empleadoX=Employee
+terceroX=Supplier
+cuentaX=Account
+debitoXX=Debit_Value
+debitoX=Debit Value
+creditoXX=Credit_Value
+creditoX=Credit Value
+conceptoX=Concept
+centroCostoXX=Cost_Center
+centroCostoX=Cost Center
+numDocumentoN=ID Number: 
+fechaGeneradaN=Expiration Date: 
