--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf_en.properties
@@ -250,3 +250,13 @@ segundoApellidoXX=Second_last_name
 nombreX=Name
 msgborrarLiquidacion=Are you sure you want to delete the liquidation?
 msgborrarLiquidacionPorFuera=Are you sure you want to delete 'settlement outside payroll?
+#Dialogos Borrar Empleado
+noeliminar=This employee already has payroll accumulates, hence, it can't be erased.
+paso1=You're about to erase an employee
+paso2=Are you completely sure?
+paso3=You're about to erase this employee:  
+paso4=Successful Elimination...
+titulopaso1=Step 1 of 4
+titulopaso2=Step 2 of 4
+titulopaso3=Step 3 of 4
+titulopaso4=Step 4 of 4
