--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf_en.properties
@@ -260,3 +260,4 @@ titulopaso1=Step 1 of 4
 titulopaso2=Step 2 of 4
 titulopaso3=Step 3 of 4
 titulopaso4=Step 4 of 4
+confirmarProcesoInterfaceContableTotal=Don't forget that before you generate an ACCOUNTING interface, you must have sent data to Treasury  and have your payroll closed. Do you want to continue?
