--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontabletotal_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontabletotal_en.properties
@@ -12,14 +12,14 @@ nuevo=New Entry
 eliminar=Erase Entry
 duplicar=Duplicate Entry
 rastro=Trace
-confirmarRastro=The table 'VIGENCIASREFORMASLABORALES' has traces for the selected entry, do you wish to continue?
-confirmarRastroHistorico=The table 'VIGENCIASREFORMASLABORALES' has historic traces,do you wish to continue?
+confirmarRastro=The table 'INTERCON_TOTAL' has traces for the selected entry, do you wish to continue?
+confirmarRastroHistorico=The table 'INTERCON_TOTAL' has historic traces,do you wish to continue?
 errorRastroHistorico=The table has no historic traces.
 errorRegistroRastro=The selected entry has no traces.
 errorTablaConRastro=The table does not exist in RASTROSTABLAS but it has associated entries, do you wish to continue?
 errorTablaSinRastro=The table does not exist in RASTROSTABLAS and has no associated entries.
 seleccionarRegistro=Please choose an entry.
-errorObjetosDB=The table 'VIGENCIASREFORMASLABORALES' hasn't been found ObjetosDB. Please get in touch with support
+errorObjetosDB=The table 'INTERCON_TOTAL' hasn't been found ObjetosDB. Please get in touch with support
 #Otros
 vacio=No results were found for this search 
 lovvacio=No results containing the search criteria were found
@@ -77,10 +77,60 @@ cuentaDebito=Debit Account
 tercero=Supplier
 concepto=Concept
 valor=Value
-editarProcesoGenerado=
-editarEmpleadoGenerado=
-editarCreditoGenerado=
-editarDebitoGenerado=
-editarTerceroGenerado=
-editarValorGenerado=
-editarConceptoGenerado=
+editarProcesoGenerado=Process - Generated
+editarEmpleadoGenerado=Employee - Generated
+editarCreditoGenerado=Credit Account
+editarDebitoGenerado=Debit Account
+editarTerceroGenerado=Supplier NIT
+editarValorGenerado=Value - Generated
+editarConceptoGenerado=Concept - Generated
+enviar=Send
+deshacer=[Undo]
+reportecontrol=Control Report
+totalC=Credit Total: 
+totalD=Debit Total: 
+intercontotal=Accounted With Total
+empleado=Employee
+cuenta=Account
+valorDebito=Debit Value
+valorCredito=Credit Value
+centroCosto=Cost Center
+editarEmpleadoIntercon=Employee - Total
+editarTerceroIntercon=Supplier -Total
+editarCuentaIntercon=Account - Total
+editarDebitoIntercon=Debit Value
+editarCreditoIntercon=Credit Value
+editarConceptoIntercon=Concept - Total
+editarCentroCostoIntercon=Cost Center - Total
+empleadoX=Employee
+cuentaX=Account
+terceroX=Supplier
+debitoXX=Debit_Value
+debitoX=Debit Value
+creditoXX=Credit_Value
+creditoX=Credit Value
+conceptoX=Concept
+centroCostoXX=Cost_Center
+centroCostoX=Cost Center
+valorX=Value
+cuentaDXX=Debit_Account
+cuentaDX=Debit Account
+cuentaCXX=Credit_Account
+cuentaCX=Credit Account
+nombreEmpleadoXX=Employee_Name
+nombreEmpleadoX=Employee Name
+generarPlano=Generate File
+cerrarPeriodo=Close Accounting Period
+tipoPlano=File Type: 
+detallado=Detailed
+semiDetallado=Semi-Detailed
+resumido=Summarized
+anteriorContabilizacion=The last interface was sent: 
+nuncaContabilizo=Never been accomplished a accounting
+errorFechasParametros=The dates entered do not match the parameters dates. Please check the dates to continue.
+anularComprobantesCerrados=Your about to cancel a voucher. \u00bfAre you sure to continue and cancel the file?
+procesoDeshacer=Your about to undo the account process.  \u00bfAre you sure to continue?
+paso1CerrarPeriodo=At this point it will close the accounting period for the process: 
+paso2CerrarPeriodo=\u00bfAre you completely sure?
+procesoSinDatos=The process has not returned any results in the search
+contadoCeroPerContable=This time period was already closed !
