--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontablesapbohp_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontablesapbohp_en.properties
@@ -117,7 +117,7 @@ HISTORICO=See Historical
 contadoCeroPerContable=This time period was already closed !
 paso1Recon=You're about to do the a re-accounting process, and this process is going to be taken into notice in the accounting configuration of payroll concepts, for it to have an effect it's state must be GENERATED
 paso2Recon=Are you sure?
-paso3Recon1=You going to re-accounting to
+paso3Recon1=You going to re-accounting to: 
 paso3Recon2=Are you sure?
 errorRecon=The re-accounting process can't be done because there has never been a accounting process.
 empleadoX=Employee
@@ -131,3 +131,4 @@ conceptoX=Concept
 centroCostoXX=Cost_Center
 centroCostoX=Cost Center
 numDocumentoN=ID Number: 
+operacionEnProceso=Operation in process. Please, wait ...
