--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontablesapbov8_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontablesapbov8_en.properties
@@ -145,3 +145,4 @@ centroCostoXX=Cost_Center
 centroCostoX=Cost Center
 numDocumentoN=ID Number: 
 fechaGeneradaN=Expiration Date: 
+operacionEnProceso=Operation in process. Please, wait ...
