--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontablesapbovca_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontablesapbovca_en.properties
@@ -131,3 +131,4 @@ conceptoX=Concept
 centroCostoXX=Cost_Center
 centroCostoX=Cost Center
 numDocumentoN=ID Number: 
+operacionEnProceso=Operation in process. Please, wait ...
