--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/usuario_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/usuario_en.properties
@@ -1,6 +1,6 @@
 #Titulo y fieldset
-titulo=Absenteeism Causes
-usuarios=Absenteeism Causes
+titulo=Users
+usuarios=Users
 #Toolbar
 guardar=Save
 editar=Edit
@@ -20,7 +20,7 @@ alias=Alias
 pantalla=Screen
 activo=A
 crear=Create
-eliminar=Erase
+eliminarR=Erase
 desbloquear=UnBlock
 resetear=Reset
 clonar=User Clone
@@ -106,10 +106,10 @@ activoXX=Active
 #NUEVO REGISTRO USUARIO
 nuevoregistro=New Entry
 ingresarnuevo=Add New User
-personaN=User Name: 
-perfilN=Profile: 
-aliasN=Alias: 
-pantallaN=Screen: 
+personaN=* User Name: 
+perfilN=* Profile: 
+aliasN=* Alias: 
+pantallaN=* Screen: 
 activoN=Active: 
 #Duplicar Registro USUARIO
 duplicarregistro=Duplicate Entry User
