--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontabletotal_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontabletotal_en.properties
@@ -133,3 +133,13 @@ procesoDeshacer=Your about to undo the account process.  \u00bfAre you sure to c
 paso1CerrarPeriodo=At this point it will close the accounting period for the process: 
 paso2CerrarPeriodo=\u00bfAre you completely sure?
 procesoSinDatos=The process has not returned any results in the search
+contadoCeroPerContable=This time period was already closed !
+operacionEnProceso=Operation in process. Please, wait ...
+paso1Recon=You're about to do the a re-accounting process, and this process is going to be taken into notice in the accounting configuration of payroll concepts, for it to have an effect it's state must be GENERATED
+paso2Recon=Are you sure?
+paso3Recon1=You going to re-accounting to: 
+paso3Recon2=Are you sure?
+errorRecon=The re-accounting process can't be done because there has never been a accounting process.
+reporteExito=Report Executed Successfully
+planoGeneradoOK=The flat report file was created successfully in the following path: 
+deseaGuardarTxt=Do you want save the previous file on your PC?
