--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontablesapbope_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontablesapbope_en.properties
@@ -132,3 +132,7 @@ centroCostoXX=Cost_Center
 centroCostoX=Cost Center
 numDocumentoN=ID Number: 
 operacionEnProceso=Operation in process. Please, wait ...
+descargar=Download
+reporteExito=Report Executed Successfully
+planoGeneradoOK=The flat report file was created successfully in the following path: 
+deseaGuardarTxt=Do you want save the previous file on your PC?
