--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontablesapbov8_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontablesapbov8_en.properties
@@ -146,3 +146,7 @@ centroCostoX=Cost Center
 numDocumentoN=ID Number: 
 fechaGeneradaN=Expiration Date: 
 operacionEnProceso=Operation in process. Please, wait ...
+descargar=Download
+reporteExito=Report Executed Successfully
+planoGeneradoOK=The flat report file was created successfully in the following path: 
+deseaGuardarTxt=Do you want save the previous file on your PC?
