--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontabletotal_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontabletotal_en.properties
@@ -143,3 +143,4 @@ errorRecon=The re-accounting process can't be done because there has never been 
 reporteExito=Report Executed Successfully
 planoGeneradoOK=The flat report file was created successfully in the following path: 
 deseaGuardarTxt=Do you want save the previous file on your PC?
+descargar=Download
