--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontablesapbohp_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontablesapbohp_en.properties
@@ -132,3 +132,5 @@ centroCostoXX=Cost_Center
 centroCostoX=Cost Center
 numDocumentoN=ID Number: 
 operacionEnProceso=Operation in process. Please, wait ...
+descargar=Download
+archivoDescargado=
