--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/atparametrotiempo_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/atparametrotiempo_en.properties
@@ -90,3 +90,12 @@ mensajeProgramarTurno=
 mensajeDesprogramarTurno=
 mensajeSimularMarcacion=
 mensajeEliminarSimulacion=
+tiempoFechaDesde=Since Date Time:
+tiempoFechaHasta=Until Date Time:
+errorHorasFechas=The enter time is bigger than 23:59
+editarParametroHoraDesde=Since Date Time
+editarParametroHoraHasta=Until Date Time
+horaFechaDesdeXX=Since_Date_Time
+horaFechaDesdeX=Since Date Time
+horaFechaHastaXX=Until_Date_Time
+horaFechaHastaX=Until Date Time
