--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/ataprobacionhe_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/ataprobacionhe_en.properties
@@ -36,3 +36,66 @@ seleccionarRegistro=Please choose an entry.
 errorObjetosDB=The table 'EERSCABECERAS' hasn't been found ObjetosDB. Please get in touch with support
 salir=Exit
 operacionEnProceso=Operation on Process. Please, wait...
+buscarEmpleados=Search Employee
+mostrarTodos=Show All
+conceptosAAprobar=Concepts To Approved
+aprobado=Approved
+estructuraAprobada=Approval Structure
+numDocumento=Document Number
+nombreEmpleado=Employee Name
+horas=Hours
+minutos=Minutes
+novedad=Novelty
+estado=Status
+paso=Pass
+fechaPago=Payment Date
+observaciones=Observations
+usuarioConectado=User Online: 
+infoUsuario=Authorize overtime assigned according to your profile
+flujosAprobados=Flows Approved
+detalles=Details
+siguienteA=Next A.
+aprobadoX=Approved
+siguienteAproXX=Next_A.
+siguienteAproX=Next A.
+numeroDocumentoXX=Document_Number
+numeroDocumentoX=Document Number
+nombreEmpleadoXX=Employee_Name
+nombreEmpleadoX=Employee Name
+horasX=Hours
+minutosX=Minutes
+novedadX=Novelty
+estadoX=Status
+pasoX=Pass
+fechaPagoXX=Payment Date
+observacionesX=Observations
+estructuraM=Structures
+buscarEA=Search Structure: 
+codigo=Code
+nombre=Name
+empleadoM=Employees
+buscarE=Search Employee:
+editarCabeceraAprobado=Approved - Concept
+editarCabeceraSiguiente=Next A. - Concept
+editarCabeceraNumDocumento=Document Number
+editarEmplNombre=Employee Name
+editarCabeceraHoras=Hours - Concept
+editarCabeceraMinuto=Minutes - Concept
+editarCabeceraNovedad=Novelty - Concept
+editarCabeceraEstado=Status - Concept
+editarCabeceraPaso=Pass - Concept
+editarCabeceraFechaPago=Payment Date - Concept
+editarCabeceraObservacion=Observation - Concept
+editarFlujoProceso=Process - Flux
+editarFlujoFecha=Date - Flux
+procesoAutorizados=Authorized Process Within Approved Flux
+fecha=Date
+procesoAutorizadoXX=Authorized_Process_Within_Approved_Flux
+procesoAutorizadoX=Authorized Process Within Approved Flux
+fechaX=Date
+procesoAutorizados2=Authorized Process Within...
+concepto=Concept
+editarDetalleConcepto=Concept - Details
+editarDetalleFecha=Date - Details
+editarDetalleObservacion=Observations - Details
+conceptoX=Concept
