02 de abril de 2016 Edwin Hastamorir Se habilitan los bordes para los elementos graficos que manejan estados por mouse.

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf_en.properties
@@ -67,7 +67,7 @@ ibc=I.B.C
 tipoviajero=Traveler Type
 centrodecosto=Cost Center - Location
 tipotrabajador=Worker Type
-legislacionlaboral=Labour Law   
+legislacionlaboral=Labour Law
 jornada=Journey
 menorvalorretencion=Low Retention Value
 vacaciones=Vacations (Read only)
@@ -230,8 +230,8 @@ tipo=Type
 #LOV Empleados
 empleadosE=Employees
 #Buscar y mostrar
-Buscar=Search Employee...
-mostrar=Show All
+Buscar=
+mostrar=
 toolTipNovedades1=Report all payments and discounts
 toolTipNovedades2=that are not automatic settlement.
 toolTipConcepto1=Settlement and accounting properties
