--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/empleadoindividual_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/empleadoindividual_en.properties
@@ -67,7 +67,8 @@ vehiculoempresa=Company Vehicle
 fechafallecimiento=Date of Death
 fechafallecimientowm=Date of Death.
 tallas=Size
-anteriorescontratos=Previous Contracts
+anteriorescontratos=Pr Contracts
+anteriorescontratostp=Previous Contracts
 perfilprofesional=Professional Profile
 informeejecutivo=Executive Summary
 #UBICACION
